deploy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 1313
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: hugo_server
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: hugo-server
          http_filters:
          - name: envoy.router
  clusters:
    - name: hugo-server
      connect_timeout: 1s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: hugo-server
        endpoints:
        - lb_endpoints:
          - endpoint:
              health_check_config:
                port_value: 1313
              address:
                socket_address:
                  address: hugo-server-1
                  port_value: 1313
          - endpoint:
              health_check_config:
                port_value: 1313
              address:
                socket_address:
                  address: hugo-server-2
                  port_value: 1313
